import "library/cpp/getoptpb/proto/confoption.proto";

import "alice/protos/data/language/language.proto";

message TConfig {
    option (NGetoptPb.Title) = "A tool for render context for HW templates NLG phrases";

    required string input = 1 [(NGetoptPb.Conf) = {
                                    Descr: "local input file with context-json per line",
                                    Short: 'i'
                              }];

    optional string output_phrases = 2 [default = "output_phrases.txt",
                                        (NGetoptPb.Conf) = {
                                            Descr: "local output file with phrase per line",
                                            Short: 'o'
                                       }];

    optional string output_cards = 3 [default = "output_cards.txt",
                                      (NGetoptPb.Conf).Descr = "local output file with card per line"
                                     ];

    optional NAlice.ELang language = 4 [default = L_UNK,
                                        (NGetoptPb.Conf) = {
                                            Descr: "specify the language to redefine the language in contexts, for example: L_ARA, L_ENG, L_RUS etc."
                                            Short: 'l'
                                       }];

    optional bool debug = 5 [default = false,
                             (NGetoptPb.Conf) = {
                                Descr: 'make output with extra columns: "scenario_name", "template_name", "phrase_name"',
                                Short: 'd'
                            }];

    optional string ScenarioResourcesPath = 6 [default = "data/alice/hollywood/shards/all/prod/resources",
                                                (NGetoptPb.Conf) = {
                                                    Descr: 'path to resources',
                                                    Short: 'r'
                                                }];

}
